# authentication/serializers.py
@@ -14,10 +14,6 @@ from .models import User
 
 
 class RegisterSerializer(serializers.Serializer):
-    # name = serializers.CharField(max_length=255)
-    # email = serializers.EmailField()
-    # password = serializers.CharField(min_length=8, write_only=True)
-    # password_confirm = serializers.CharField(write_only=True)
     first_name = serializers.CharField(max_length=150)
     last_name = serializers.CharField(max_length=150)
     email = serializers.EmailField()
@@ -34,16 +30,7 @@ class RegisterSerializer(serializers.Serializer):
             raise serializers.ValidationError('Password dan konfirmasi password tidak cocok')
         return data
 
-    # def create(self, validated_data):
-    #     first = validated_data.pop('first_name')
-    #     last = validated_data.pop('last_name')
-    #     validated_data.pop('password_confirm')
 
-    #     user = User.objects.create_user(
-    #         name=name,
-    #         **validated_data
-    #     )
-    #     return user
 class LoginSerializer(serializers.Serializer):
     email = serializers.EmailField()
     password = serializers.CharField()
@@ -52,4 +39,9 @@ class LoginSerializer(serializers.Serializer):
 class UserSerializer(serializers.ModelSerializer):
     class Meta:
         model = User
-        fields = ['id', 'name', 'email', 'is_onboarded']
+        fields = ['id', 'name', 'email', 'role', 'is_onboarded', 'country', 'initial_level']
+
+
+class OnboardingSerializer(serializers.Serializer):
+    country = serializers.CharField()
+    initial_level = serializers.ChoiceField(choices=['A1', 'A2'])
